2002-08-18  Havoc Pennington  <hp@pobox.com>

	* autogen.sh: hardcode aclocal-1.4/automake-1.4 so that users with
	both automake 1.6 and 1.4 installed get the right automake. Means
	compilation from CVS will now require the latest automake 1.4
	release, or manually creating symlinks called "automake-1.4" and
	"aclocal-1.4"

2002-07-01  Alexander Larsson  <alexl@redhat.com>

	* Release 2.3.10

2002-07-01  Alexander Larsson  <alexl@redhat.com>

	* configure.in (LIBART_VERSION_INFO):
	Bump to 2.3.10

	* art_svp_intersect.c (art_svp_intersect_add_seg):
	Initialize seg->wind_left to zero, this avoids
	uninitialized memory read later in art_svp_intersect_horiz_commit.

2002-06-24  Alexander Larsson  <alexl@redhat.com>

	Release 2.3.9.
	
2002-06-24  Alexander Larsson  <alexl@redhat.com>

	* configure.in: Bump to 2.3.9

2002-06-04  Balamurali Viswanathan <balamurali.viswanathan@wipro.com>

	* Makefile.am: Added -lm to libart_lgpl_2_la_LIBADD
	fixes bug 75711 (Jacob's suggestion)

2002-05-08  Raph Levien  <raph@pixel.artofcode.com>

	* art_uta_vpath.c (art_uta_add_line): Fixes very subtle
	edge case found by Federico Mena Quintero: (96, 96) -
	(96.220200017562348, 93.034868598919431). Previously, through
	numerical error, xn was a hair to the left, throwing off
	the Bresenham iteration.

2002-03-08  Tor Lillqvist  <tml@iki.fi>

	* configure.in: Minor changes for build on Win32. Call
	AC_LIBTOOL_WIN32_DLL. Set automake conditionals OS_WIN32 and
	MS_LIB_AVAILABLE.

	* art_affine.c: Include art_misc.h for M_PI, which not necessarily
	is in math.h.

	* Makefile.am: On Win32, build and install import libraries, both
	for gcc and for MSVC (if available).

	* libart-zip.in: New file. Used to build runtime and developer
	package for Win32.

2002-02-06  Laszlo Peter  <laca@ireland.sun.com>

	* configure.in: add AC_FUNC_ALLOCA

	* art_render_gradient.c: copy alloca hacks from glib/galloca.h

2002-02-02  Alexander Larsson  <alla@lysator.liu.se>

	* art_render.c: