@@ -1,3 +1,11 @@
+2002-10-16  John Harper  <jsh@unfactored.org>
+
+	* art_render_svp.c (art_render_svp_callback,
+	art_render_svp_callback_span, art_render_svp_callback_opacity,
+	art_render_svp_callback_opacity_span): if no runs would
+	normally be emitted, but start is greater than zero, emit a
+	single run covering the entire width of the rendered region
+
 2002-08-18  Havoc Pennington  <hp@pobox.com>
 
 	* autogen.sh: hardcode aclocal-1.4/automake-1.4 so that users with
